Clases terminadas, interfaz del sistema

--- a/FINAL_COMANDAv2/.vscode/launch.json
+++ b/FINAL_COMANDAv2/.vscode/launch.json
@@ -8,7 +8,8 @@
             "type": "chrome",
             "request": "launch",
             "name": "Lanzar Chrome contra localhost",
-            "url": "file:///E:/leandrop/Documents/Facultad/Labo3/GIT/FINAL_COMANDAv2/index.html?",
+            // "url": "file:///E:/leandrop/Documents/Facultad/Labo3/GIT/FINAL_COMANDAv2/index.html?",
+            "url": "file:///E:/leandrop/Documents/Facultad/Labo3/GIT/FINAL_COMANDAv2/main.html",
             "webRoot": "${workspaceFolder}"
         }
     ]
