OK Agregando empleado, viendo login

--- a/FINAL_COMANDAv2/.vscode/launch.json
+++ b/FINAL_COMANDAv2/.vscode/launch.json
@@ -8,9 +8,9 @@
             "type": "chrome",
             "request": "launch",
             "name": "Lanzar Chrome contra localhost",
-            // "url": "file:///E:/leandrop/Documents/Facultad/Labo3/GIT/FINAL_COMANDAv2/index.html?",
+            "url": "file:///E:/leandrop/Documents/Facultad/Labo3/GIT/FINAL_COMANDAv2/index.html",
             // "url": "file:///E:/leandrop/Documents/Facultad/Labo3/GIT/FINAL_COMANDAv2/main.html",
-            "url": "file:///E:/leandrop/Documents/Facultad/Labo3/GIT/FINAL_COMANDAv2/home.html",
+            // "url": "file:///E:/leandrop/Documents/Facultad/Labo3/GIT/FINAL_COMANDAv2/home.html",
             "webRoot": "${workspaceFolder}"
         }
     ]
